--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
 	<div class="obal">
 
-		<!-- menu -->
+
+		<!-- Menu -->
 		<header class="header">
 			<div class="logo">SUPER APPKA</div>
 			<div class="menu">
@@ -26,12 +27,14 @@
 			</div>
 		</header>
 
-		<!-- hero sekce / banner -->
+
+
+		<!-- Hero sekce / banner -->
+
 		<div class="hero">
-			<div class="box">
+			<div class="banner">
 				<div class="text">
 					<h1>Super Appka</h1>
-
 					<p>Úžasná mobilní aplikace,
 					<br> která Ti změní život.</p>
 				</div>
@@ -47,22 +50,31 @@
 
 
 
-		<!-- obsah se 3 sloupci -->
-		<img src="images/letadlo.svg" alt="Letadlo">
-		<h2>Cestuj po světě</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, perferendis maxime quisquam cum ut nobis corporis ipsa eveniet deleniti.</p>
+		<!-- Obsah se 3 sloupci -->
 
-		<img src="images/bubliny.svg" alt="Bubliny">
-		<h2>Chatuj s přáteli</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, perferendis maxime quisquam cum ut nobis corporis ipsa eveniet deleniti.</p>
-
-		<img src="images/mapa.svg" alt="Mapa">
-		<h2>Zažij dobrodružství</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, perferendis maxime quisquam cum ut nobis corporis ipsa eveniet deleniti.</p>
+		<div class="container">
+			<div class="box">
+				<img src="images/letadlo.svg" alt="Letadlo">
+				<h2>Cestuj po světě</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, perferendis maxime quisquam cum ut nobis corporis ipsa eveniet deleniti.</p>
+			</div>
+			<div class="box">
+				<img src="images/bubliny.svg" alt="Bubliny">
+				<h2>Chatuj s přáteli</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, perferendis maxime quisquam cum ut nobis corporis ipsa eveniet deleniti.</p>
+			</div>
+			<div class="box">
+				<img src="images/mapa.svg" alt="Mapa">
+				<h2>Zažij dobrodružství</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, perferendis maxime quisquam cum ut nobis corporis ipsa eveniet deleniti.</p>
+			</div>
+		</div>
 
 
 		<!-- patička -->
-		<p>&copy;2020, Czechitas</p>
+		<footer>
+			<p>&copy;2020, Czechitas</p>
+		</footer>
 
 
 	</div><!-- konec obalu -->
